# fylang

./: CMakeLists.txt  THOUGHTS.md  all-examples.sh  hello.fy  install.sh  readme.md  run-example.sh  run.sh  tests.sh
examples/: 00-hello-world.fy  01-global-variables.fy  02-indexing.fy  02-pointer-logic.fy  03-for-loop.fy  03-void-pointer.fy  03-while-loop.fy  04-structs.fy  04-while-loop.fy  05-function-pointers.fy  05-structs.fy  06-declare.fy  06-function-pointers.fy  06-method-extensions.fy  07-declare.fy  07-include.fy  07-type-alias.fy  08-type-alias.fy  09-string.fy  global-variables.fy  hello-world.fy  pointer-logic.fy  void-pointer.fy  while-loop.fy
lib/: cat.fy
lib/c/: ctype.fy  math.fy  stddef.fy  stdio.fy  stdlib.fy  string.fy
lib/os/linux/: io.fy
lib/os/windows/: io.fy
lib/std/: array.fy  c-std.fy  char.fy  consts.fy  cpp-implemented-std.fy  file.fy  io.fy  std.fy  string.fy  types.fy  utils.fy
src/: asts.cpp  consts.cpp  consts.h  fy-std.cpp  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  reader.cpp  reader.h  types.cpp  types.h  ucr.cpp  ucr.h  utils.cpp  utils.h  values.cpp  values.h  variables.cpp
src/asts/: asts.cpp  asts.h  functions.cpp  functions.h  scope.cpp  scope.h  types.cpp  types.h
src/asts/asts/: array.cpp  array.h  asm.cpp  asm.h  assign.cpp  assign.h  binop.cpp  binop.h  block.cpp  block.h  bool.cpp  bool.h  call.cpp  call.h  cast.cpp  cast.h  char.cpp  char.h  conditional.cpp  conditional.h  declare.cpp  declare.h  index.cpp  index.h  let.cpp  let.h  loop.cpp  loop.h  new.cpp  new.h  null.cpp  null.h  number.cpp  number.h  scope.cpp  sizeof.cpp  sizeof.h  string.h  tuple.cpp  tuple.h  (+10 more)
tests/: arr-ops.fy  arr-ops.txt  asm.fy  generics.fy  generics.txt  if-type.fy  spaces.fy  spaces.txt  structs.fy  variables.fy
tests/std/: array.fy  array.txt
